# help2

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/compiler/: CodeGenerator.h  Compiler.h  FileStructure.h  Options.h  TypeChecker.h
include/interpreter/: Interpreter.h  PartialFunctionBinding.h
include/lang/: Context.h  Expression.h  Function.h  Pattern.h  Type.h
include/lang/core/: BuiltinFunction.h  Core.h  CoreBuilder.h  PrimitiveType.h
include/parser/: FileStructure.h  ParseTree.h  Parser.h  Tokeniser.h
include/parser/ast/: ASTNode.h  ExpressionASTNodes.h  FunctionASTNodes.h  PatternASTNodes.h  TypeASTNodes.h  Viewable.h
include/parser/old/: Parser.h  Tokeniser.h
src/compiler/: CodeGenerator.cpp  Compiler.cpp  ExpressionCodeGenerator.cpp  FileStructure.cpp  FunctionCodeGenerator.cpp  Options.cpp  TypeChecker.cpp  TypeCodeGenerator.cpp
src/interpreter/: Interpreter.cpp  PartialFunctionBinding.cpp
src/lang/: Context.cpp  Expression.cpp  Function.cpp  Pattern.cpp  Type.cpp
src/lang/core/: BuiltinFunction.cpp  Core.cpp  CoreBuilder.cpp  PrimitiveType.cpp
src/parser/: FileStructure.cpp  ParseTree.cpp  Parser.cpp  Tokeniser.cpp
src/parser/ast/: ASTNode.cpp  ExpressionASTNodes.cpp  FunctionASTNodes.cpp  PatternASTNodes.cpp  TypeASTNodes.cpp
src/parser/old/: Parser.cpp  Tokeniser.cpp
syntax/: help.vim
